force-app/main/default/objects/KIncontournable__c/KIncontournable__c.object-meta.xml
<CustomObject>
    <label>Incontournable (K)</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incontournables (K)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>