force-app/main/default/objects/KIncontournable__c/fields/commentaires__c.field-meta.xml
<CustomField>
    <fullName>commentaires__c</fullName>
    <label>Commentaires/Actions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>