force-app/main/default/objects/KIncontournable__c/fields/contrat__c.field-meta.xml
<CustomField>
    <fullName>contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat</label>
    <referenceTo>KContrat__c</referenceTo>
    <relationshipName>contratIncontournables</relationshipName>
    <type>Lookup</type>
</CustomField>