force-app/main/default/objects/KIncontournable__c/fields/dateEnvoiCourrier__c.field-meta.xml
<CustomField>
    <fullName>dateEnvoiCourrier__c</fullName>
    <label>Date d&apos;envoi du courrier</label>
    <type>Date</type>
</CustomField>