force-app/main/default/objects/KIncontournable__c/fields/dateIncontournable__c.field-meta.xml
<CustomField>
    <fullName>dateIncontournable__c</fullName>
    <label>Date d&apos;incontournable</label>
    <type>Date</type>
</CustomField>