force-app/main/default/objects/KIncontournable__c/fields/devis__c.field-meta.xml
<CustomField>
    <fullName>devis__c</fullName>
    <label>Devis</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Incontournables (K)</relationshipLabel>
    <relationshipName>devisIncontournables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>