force-app/main/default/objects/KIncontournable__c/fields/GDPR_dateExpiration__c.field-meta.xml
<CustomField>
    <fullName>GDPR_dateExpiration__c</fullName>
    <label>Date expiration (GDPR)</label>
    <type>Date</type>
</CustomField>