force-app/main/default/objects/KIncontournable__c/fields/nature__c.field-meta.xml
<CustomField>
    <fullName>nature__c</fullName>
    <label>Nature</label>
    <length>50</length>
    <type>Text</type>
</CustomField>