force-app/main/default/objects/KIncontournable__c/fields/nImprimeBdC__c.field-meta.xml
<CustomField>
    <fullName>nImprimeBdC__c</fullName>
    <label>N° imprimé BdC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>