force-app/main/default/objects/KIncontournable__c/fields/nImprimeMdC__c.field-meta.xml
<CustomField>
    <fullName>nImprimeMdC__c</fullName>
    <label>N° imprimé MdC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>