force-app/main/default/objects/KIncontournable__c/fields/nIncontournable__c.field-meta.xml
<CustomField>
    <fullName>nIncontournable__c</fullName>
    <externalId>true</externalId>
    <label>N° incontournable</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>