force-app/main/default/objects/KIncontournable__c/fields/statut__c.field-meta.xml
<CustomField>
    <fullName>statut__c</fullName>
    <label>Statut</label>
    <length>50</length>
    <type>Text</type>
</CustomField>